Fix: Prevent line break in p tag text

--- a/src/styles/MyPage/EditProfile.css
+++ b/src/styles/MyPage/EditProfile.css
@@ -55,6 +55,10 @@
     align-items: center;
     gap: 20px;
   }
+
+  .editProfileAlarm p {
+    white-space: nowrap;
+  }
   
   .toggleSwitch {
     position: relative;
